--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-"name": "sudhe",
-"version": "1.0.0",
-"main": "Gif.js",
-"scripts": {},
-"keywords": [],
-"author": "",
-"license": "ISC",
-"description": "",
-"dependencies": {
-"discord.js": "^14.0.0",
-"axios": "^1.0.0"
-}
+  "name": "sudhe",
+  "version": "1.0.0",
+  "main": "Gif.js",
+  "scripts": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "discord.js": "^14.0.0",
+    "axios": "^1.0.0",
+    "dotenv": "^10.0.0"
+  }
 }
