--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 }
 {
   "spamThreshold": 2000, 
-  "badWords": ["badword1", "badword2", "badword3"], 
+  "badWords": ["chutiya", "bkl", "lund", "gandu", "madarchod", "maa ki chut"], 
   "muteDuration": 60000, 
   "warnMessage": "Please refrain from using inappropriate language or spamming."
 }
