--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "discord.js": "^14.0.0",
     "dotenv": "^10.0.0",
     "node-fetch": "^3.0.0"
-     "axios": "^1.
+     "axios": "^1.0.0"
   }
 }
