--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "your-bot-name",
-  "version": "1.0.0",
-  "description": "A cool Discord bot",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "discord.js": "^14.0.0",
-    "dotenv": "^10.0.0",
-    "node-fetch": "^3.0.0",
-    "axios": "^1.0.0"
-  }
+"name": "Nishu",
+"version": "1.0.0",
+"description": "Most Advanced Discord Bot By Krimes with Shapes INC and Disha",
+"main": "index.js",
+"scripts": {
+"start": "node index.js",
+"voice": "node voice.js"
+},
+"dependencies": {
+"discord.js": "^14.0.0",
+"dotenv": "^10.0.0",
+"node-fetch": "^3.0.0",
+"axios": "^1.0.0",
+"@google-cloud/text-to-speech": "^3.0.0",
+"fs": "^0.0.1-security",
+"util": "^0.12.4"
+}
 }
