--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "Nishu",
   "version": "1.0.0",
   "description": "Most Advanced Discord Bot By Krimes with Shapes INC and Disha",
-  "main": "Gif.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node voice.js",
-    "voice": "node voice.js"
+    "start": "node index.js",
+    "voice": "node index.js"
   },
   "dependencies": {
     "discord.js": "^14.0.0",
